--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/js/select2.min.js"></script>
-    <script src= "script.js"></script>
+    <script type="text/javascript">$(document).ready(function() =>{
+    $("#DealerId, #SourceId, #SourceTypeId, #LeadDesignationId, #RouteInformationId, #CrmId, #LeadTypeId").select2({
+        placeholder: "Search..",
+        allowClear: true,
+        width: "66%",
+        });
+    }); 
+    </script>
 </head>
 <body>
     <div class="col-md-7">
